import { sign } from "node:crypto";
import { FederationPlayerTransferState } from "../../../../../src/generated/prisma/enums.js";
import { prisma } from "../../../../../src/prisma.js";
import { createServer } from "../../../../../src/server.js";
import { mockConfig, mockFederationTransfer, NODE2_IDENTITY } from "../../../../mock.js";

export const PLAYER1_BASE64_SNAPSHOT =
  "ewogICAgImluZGV4IjogMCwKICAgICJndWlkIjogIjkzMzdiZGNkLWQ3OTYtNGUxZC1iNmM0LTc5Y2EzM2Q0NWYwMiIsCiAgICAiaXNBY3RpdmUiOiB0cnVlLAogICAgImJhbGFuY2UiOiAiJDIsODM1LjMyIiwKICAgICJhZ2UiOiAzNSwKICAgICJmcmllbmRzIjogWwogICAgICB7CiAgICAgICAgImlkIjogMCwKICAgICAgICAibmFtZSI6ICJUd2lsYSBPbGl2ZXIiCiAgICAgIH0sCiAgICAgIHsKICAgICAgICAiaWQiOiAxLAogICAgICAgICJuYW1lIjogIkNoYXJpdHkgTWlsZXMiCiAgICAgIH0sCiAgICAgIHsKICAgICAgICAiaWQiOiAyLAogICAgICAgICJuYW1lIjogIkNocmlzIEJ1cmdlc3MiCiAgICAgIH0KICAgIF0sCiAgICAiZ3JlZXRpbmciOiAiSGVsbG8sIEx1ZWxsYSBHcmFoYW0hIFlvdSBoYXZlIDQgdW5yZWFkIG1lc3NhZ2VzLiIsCiAgICAiZmF2b3JpdGVGcnVpdCI6ICJiYW5hbmEiCiAgfQ==";
export const PLAYER1_BASE64_SNAPSHOT_HASH = "ede98e1145e1041f14d39314cfbdf63e7bfd746dd591ef69eae5a2f17a922ac4";

describe("Federation Transfers Snapshot", () => {
  it("should be a 400 when there is no body", async () => {
    const server = createServer(mockConfig());
    const response = await server.inject({
      method: "POST",
      url: "/federation/v1/transfers/snapshot",
    });

    expect(response.statusCode).toBe(400);
    expect(response.json()).toMatchSnapshot();
  });

  it("should send status 400 when fields in body are missing", async () => {
    const server = createServer(mockConfig());
    const response = await server.inject({
      method: "POST",
      url: "/federation/v1/transfers/snapshot",
      body: {},
    });

    expect(response.statusCode).toBe(400);
    expect(response.json()).toMatchSnapshot();
  });

  it("should send status 401 when nodeId is not trusted", async () => {
    const server = createServer(mockConfig());
    const response = await server.inject({
      method: "POST",
      url: "/federation/v1/transfers/snapshot",
      body: {
        message: {
          requestId: "00000000-0000-4000-8000-000000000000",
          transferId: "00000000-0000-4000-8000-000000000001",
          snapshot: PLAYER1_BASE64_SNAPSHOT,
          snapshotHash: PLAYER1_BASE64_SNAPSHOT_HASH,
          timestamp: "2026-01-01T00:00:00.000Z",
        },
        nodeId: "2f0e3690-2888-4f02-807c-ec0b93506234",
        signature: "",
      },
    });

    expect(response.statusCode).toBe(401);
    expect(response.json()).toEqual({ error: "Unrecognized node ID" });
  });

  it("should send status 401 when signature is bad", async () => {
    const server = createServer(mockConfig());
    const response = await server.inject({
      method: "POST",
      url: "/federation/v1/transfers/snapshot",
      body: {
        message: {
          requestId: "00000000-0000-4000-8000-000000000000",
          transferId: "00000000-0000-4000-8000-000000000001",
          snapshot: PLAYER1_BASE64_SNAPSHOT,
          snapshotHash: PLAYER1_BASE64_SNAPSHOT_HASH,
          timestamp: "2026-01-01T00:00:00.000Z",
        },
        nodeId: "00000000-0000-4000-8000-000000000001",
        signature: "invalid-signature",
      },
    });

    expect(response.statusCode).toBe(401);
    expect(response.json()).toEqual({ error: "Invalid signature" });
  });

  it("should send status 400 when message out of time ranges", async () => {
    const server = createServer(mockConfig());
    const message = {
      requestId: "00000000-0000-4000-8000-000000000000",
      transferId: "00000000-0000-4000-8000-000000000001",
      snapshot: PLAYER1_BASE64_SNAPSHOT,
      snapshotHash: PLAYER1_BASE64_SNAPSHOT_HASH,
      timestamp: "2026-01-01T00:00:31.000Z",
    };

    const response = await server.inject({
      method: "POST",
      url: "/federation/v1/transfers/snapshot",
      body: {
        message: message,
        nodeId: "00000000-0000-4000-8000-000000000001",
        signature: sign(null, Buffer.from(JSON.stringify(message), "utf-8"), {
          key: NODE2_IDENTITY.privateKey,
        }).toString("hex"),
      },
    });

    expect(response.statusCode).toBe(400);
    expect(response.json()).toEqual({ error: "Message out of acceptable time range" });
  });

  it("should send status 404 when there is no transfer initiated", async () => {
    const server = createServer(mockConfig());
    const message = {
      requestId: "00000000-0000-4000-8000-000000000000",
      transferId: "00000000-0000-4000-8000-000000000001",
      snapshot: PLAYER1_BASE64_SNAPSHOT,
      snapshotHash: PLAYER1_BASE64_SNAPSHOT_HASH,
      timestamp: "2026-01-01T00:00:00.000Z",
    };

    const response = await server.inject({
      method: "POST",
      url: "/federation/v1/transfers/snapshot",
      body: {
        message: message,
        nodeId: "00000000-0000-4000-8000-000000000001",
        signature: sign(null, Buffer.from(JSON.stringify(message), "utf-8"), {
          key: NODE2_IDENTITY.privateKey,
        }).toString("hex"),
      },
    });

    expect(response.statusCode).toBe(404);
    expect(response.json()).toEqual({ error: "Transfer not found" });
  });

  it("should send status 400 when transfer is not APPROVED_BY_TARGET", async () => {
    const mockTransfer = mockFederationTransfer({
      id: "00000000-0000-4000-8000-000000000001",
      state: FederationPlayerTransferState.EXPIRED,
    });
    const dbTransfer = await prisma.federationPlayerTransfer.create({ data: mockTransfer });

    const server = createServer(mockConfig());
    const message = {
      requestId: mockTransfer.requestId,
      transferId: dbTransfer.id,
      snapshot: PLAYER1_BASE64_SNAPSHOT,
      snapshotHash: PLAYER1_BASE64_SNAPSHOT_HASH,
      timestamp: "2026-01-01T00:00:00.000Z",
    };
    const response = await server.inject({
      method: "POST",
      url: "/federation/v1/transfers/snapshot",
      body: {
        message: message,
        nodeId: "00000000-0000-4000-8000-000000000001",
        signature: sign(null, Buffer.from(JSON.stringify(message), "utf-8"), {
          key: NODE2_IDENTITY.privateKey,
        }).toString("hex"),
      },
    });

    expect(response.statusCode).toBe(400);
    expect(response.json()).toEqual({ error: "Transfer is not approved by target" });
  });

  it("should send status 400 when hash does not match the snapshot", async () => {
    const mockTransfer = mockFederationTransfer({
      id: "00000000-0000-4000-8000-000000000001",
      state: FederationPlayerTransferState.APPROVED_BY_TARGET,
    });
    const dbTransfer = await prisma.federationPlayerTransfer.create({ data: mockTransfer });

    const server = createServer(mockConfig());
    const message = {
      requestId: mockTransfer.requestId,
      transferId: dbTransfer.id,
      snapshot: PLAYER1_BASE64_SNAPSHOT,
      snapshotHash: "73475cb40a568e8da8a045ced110137e159f890ac4da883b6b17dc651b3a8049",
      timestamp: "2026-01-01T00:00:00.000Z",
    };
    const response = await server.inject({
      method: "POST",
      url: "/federation/v1/transfers/snapshot",
      body: {
        message: message,
        nodeId: "00000000-0000-4000-8000-000000000001",
        signature: sign(null, Buffer.from(JSON.stringify(message), "utf-8"), {
          key: NODE2_IDENTITY.privateKey,
        }).toString("hex"),
      },
    });

    const dbTranfer = await prisma.federationPlayerTransfer.findFirst({
      where: {
        requestId: message.requestId,
        id: message.transferId,
      },
    });

    expect(dbTranfer?.state).toBe(FederationPlayerTransferState.REJECTED_BY_TARGET_AT_SNAPSHOT);
    expect(dbTranfer?.cause).toBe("Snapshot hash does not match");
    expect(response.statusCode).toBe(400);
    expect(response.json()).toEqual({ error: "Snapshot hash does not match" });
  });

  it("should send status 400 when the snapshot's JSON is malformed", async () => {
    const mockTransfer = mockFederationTransfer({
      id: "00000000-0000-4000-8000-000000000001",
      state: FederationPlayerTransferState.APPROVED_BY_TARGET,
    });
    const dbTransfer = await prisma.federationPlayerTransfer.create({ data: mockTransfer });

    const server = createServer(mockConfig());
    const message = {
      requestId: mockTransfer.requestId,
      transferId: dbTransfer.id,
      snapshot: "eyJhIjogfQ==",
      snapshotHash: "ebf138ac85cdddcd064eacdf7e22bd5f4a7b2064f522a49ef2b4dcdb861cd165",
      timestamp: "2026-01-01T00:00:00.000Z",
    };
    const response = await server.inject({
      method: "POST",
      url: "/federation/v1/transfers/snapshot",
      body: {
        message: message,
        nodeId: "00000000-0000-4000-8000-000000000001",
        signature: sign(null, Buffer.from(JSON.stringify(message), "utf-8"), {
          key: NODE2_IDENTITY.privateKey,
        }).toString("hex"),
      },
    });

    const dbTranfer = await prisma.federationPlayerTransfer.findFirst({
      where: {
        requestId: message.requestId,
        id: message.transferId,
      },
    });

    expect(dbTranfer?.state).toBe(FederationPlayerTransferState.REJECTED_BY_TARGET_AT_SNAPSHOT);
    expect(dbTranfer?.cause).toBe("Snapshot JSON parse error");
    expect(response.statusCode).toBe(400);
    expect(response.json()).toEqual({ error: "Snapshot parse error" });
  });

  it("should send status 204", async () => {
    const mockTransfer = mockFederationTransfer({
      id: "00000000-0000-4000-8000-000000000001",
      state: FederationPlayerTransferState.APPROVED_BY_TARGET,
    });
    const dbTransfer = await prisma.federationPlayerTransfer.create({ data: mockTransfer });

    const server = createServer(mockConfig());
    const message = {
      requestId: mockTransfer.requestId,
      transferId: dbTransfer.id,
      snapshot: PLAYER1_BASE64_SNAPSHOT,
      snapshotHash: PLAYER1_BASE64_SNAPSHOT_HASH,
      timestamp: "2026-01-01T00:00:00.000Z",
    };

    const response = await server.inject({
      method: "POST",
      url: "/federation/v1/transfers/snapshot",
      body: {
        message: message,
        nodeId: "00000000-0000-4000-8000-000000000001",
        signature: sign(null, Buffer.from(JSON.stringify(message), "utf-8"), {
          key: NODE2_IDENTITY.privateKey,
        }).toString("hex"),
      },
    });

    expect(response.statusCode).toBe(204);
  });

  it("should save the message in the event log", async () => {
    const mockTransfer = mockFederationTransfer({
      id: "00000000-0000-4000-8000-000000000001",
      state: FederationPlayerTransferState.APPROVED_BY_TARGET,
    });
    const dbTransfer = await prisma.federationPlayerTransfer.create({ data: mockTransfer });

    const server = createServer(mockConfig());
    const message = {
      transferId: dbTransfer.id,
      requestId: mockTransfer.requestId,
      snapshot: PLAYER1_BASE64_SNAPSHOT,
      snapshotHash: PLAYER1_BASE64_SNAPSHOT_HASH,
      timestamp: "2026-01-01T00:00:00.000Z",
    };

    const signature = sign(null, Buffer.from(JSON.stringify(message), "utf-8"), {
      key: NODE2_IDENTITY.privateKey,
    }).toString("hex");

    const response = await server.inject({
      method: "POST",
      url: "/federation/v1/transfers/snapshot",
      body: {
        message: message,
        nodeId: "00000000-0000-4000-8000-000000000001",
        signature,
      },
    });

    expect(response.statusCode).toBe(204);
    await expect(
      prisma.federationEvent.findFirst({
        where: {
          eventType: "FEDERATION_TRANSFER_SNAPSHOT",
          nodeId: "00000000-0000-4000-8000-000000000001",
          payload: { equals: JSON.stringify(message) },
          signature: signature,
        },
      }),
    ).resolves.toHaveProperty("id");
  });
});
